tests/custom/STARIS_2022/operation-type-errors/allDiffExcept-type-error-02/stderr.expected
Error:
    Parser error in file: allDiffExcept-type-error.essence Error is:
ValidatorError allDiffExcept-type-error.essence:2:35:
  |
2 | such that b = alldifferent_except(false, [1, 2, 3, 4])
  |                                   ^^^^^
Type error:
	Expected:"Matrix or list"
	Got: bool

allDiffExcept-type-error.essence:2:42:
  |
2 | such that b = alldifferent_except(false, [1, 2, 3, 4])
  |                                          ^^^^^^^^^^^^
Type error:
	Expected:"int enum or bool"
	Got: matrix indexed by [int] of int

